<resources>
    <string name="app_name">KooKoo</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="yearlevel">
        <item>Elementary</item>
        <item>Junior High School</item>
        <item>Senior High School</item>
        <item>College</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there">Welcome</string>
    <string name="log_in_description">Log in to your account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="classrooms">Classrooms</string>
    <string name="create_a_class">Create a Class</string>
    <string name="title_activity_pang_test_lang_lods">PangTestLangLodsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>